--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Luka Popovic",
   "license": "ISC",
   "dependencies": {
+    "a2-in-memory-web-api": "^0.1.8",
     "angular2": "^2.0.0-beta.7",
+    "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
-    "lodash": "^4.5.1",
+    "lodash": "^4.6.1",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "^0.19.23",
