--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "todo",
   "version": "1.0.0",
   "description": "Small app trying out Angular2",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
+    "serve": "node server.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "go": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "http": "http-server",
+    "go": "concurrent \"npm run tsc:w\" \"npm run serve\" "
   },
   "author": "Luka Popovic",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
+    "express": "^4.13.4",
     "lodash": "^4.6.1",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.2",
@@ -25,7 +27,7 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0",
-    "typescript": "^1.8.2"
+    "typescript": "^1.8.2",
+    "http-server": "^0.9.0"
   }
 }
