--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "a2-in-memory-web-api": "^0.1.8",
     "angular2": "^2.0.0-beta.7",
+    "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.33.13",
     "express": "^4.13.4",
     "lodash": "^4.6.1",
+    "mongoose": "^4.4.7",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "systemjs": "^0.19.23",
